--- a/app/code/Apptha/Marketplace/view/frontend/email/seller_order_notification.html
+++ b/app/code/Apptha/Marketplace/view/frontend/email/seller_order_notification.html
@@ -1,13 +1,13 @@
-<!--@subject New Order Notification @-->
+<!--@subject Nuevo pedido en Chivo zhop @-->
 
 {{template config_path="design/email/header_template"}}
 <table>
 	<tr>
 		<td valign="top">
 			<p style="font-size: 12px; line-height: 16px; margin: 0 0 16px 0;">
-				Hi {{var seller_name}},<br /> <br /> Kindly check out the details
-				on the latest product[s] purchased.<br /> <br /> Buyer Name: {{var
-				buyer_name}} <br /> Email id: {{var buyer_email}}<br /> Order id:
+				Hola {{var seller_name}},<br /> <br /> Echa un vistazo a los detalles
+en los últimos productos comprados.<br /> <br /> Comprador: {{var
+				buyer_name}} <br /> Email: {{var buyer_email}}<br /> Order id:
 				#{{var increment_id}}<br />
 			</p> <br />
 		<br /> {{layout handle="marketplace_order_items" order_id=$order_id
